<resources>
  <string name="app_name">shop</string>
  <string name="shop">"商店"</string>
  <string name="on_sale">出售中</string>
  <string name="off_sale">已下架</string>
  <string name="category_manage">分类管理</string>
  <string name="inventory_manage">库存管理</string>

  <!--common-->
  <string name="sale_count">销量</string>
  <string name="date">日期</string>
  <string name="product">商品</string>
  <string name="goods">规格</string>
  <string name="price">价格</string>
  <string name="weight">权重</string>
  <string name="show_weight">显示权重</string>
  <string name="category">分类</string>
  <string name="shop_type">规格</string>
  <string name="inventory">库存</string>
  <string name="total_count">总共</string>
  <string name="category_default">常规</string>
  <string name="back_shop_home">回到首页</string>
  <string name="continue_add">继续添加</string>
  <string name="not_found_match_result">未找到相关结果</string>

  <!--product-->
  <string name="product_detail_format">销量：%d 库存：%d 权重：%d</string>
  <string name="add_product_date">添加时间：%</string>
  <string name="add_product_time">添加时间</string>
  <string name="add_product">添加商品</string>
  <string name="add_product_image">添加商品图片</string>
  <string name="product_detail">商品详情</string>
  <string name="search_product">搜索店内商品</string>
  <string name="product_empty_text">暂无出售中商品，赶快去添加吧～</string>
  <string name="product_empty_offsale_text">暂无已下架商品，赶快去添加吧～</string>
  <string name="input_product_name">请填写商品名称</string>
  <string name="input_product_unit">例如：个、瓶</string>
  <string name="input_product_price">请填写商品价格</string>
  <string name="input_product_inventory">请填写库存数量</string>
  <string name="input_product_category">请填写规格名称</string>
  <string name="add_product_category">添加商品规格</string>
  <string name="product_desc">商品描述</string>
  <string name="category_to">分类至</string>
  <string name="not_category">未分类</string>
  <string name="input_product_weight">数字越大越靠前</string>

  <string name="product_pay_channal">支付方式</string>
  <string name="product_pay_online">线上支付</string>
  <string name="product_pay_offline">线下支付</string>
  <string name="product_pay_card">会员卡支付</string>
  <string name="product_pay_card_price">会员卡支付价格</string>
  <string name="choose_product_pay_channel">选择支付方式</string>
  <string name="choose_product_pay_card">选择储值卡</string>


  <string name="product_pay_card_prices">会员卡支付价格</string>
  <string name="product_pay_online_prices">在线支付价格</string>
  <string name="product_pay_offline_prices">线下支付价格</string>


  <string name="product_name">商品名称</string>
  <string name="product_unit">单位</string>
  <string name="product_onsale">商品上架成功！</string>
  <string name="product_onsave">商品保存成功！</string>
  <string name="product_offsale_status">商品当前状态为[已下架]</string>
  <string name="product_onsave_status">商品当前状态为[出售中]</string>
  <string name="product_only_save">仅保存</string>
  <string name="product_save_sale">保存并上架</string>
  <!--//TODO 修改命名-->
  <string name="product_deliver_channal">交货方式</string>
  <string name="deliver_onsale">现场购买</string>
  <string name="deliver_by_self">到店自取</string>
  <string name="deliver_send">快递</string>
  <string name="product_card">会员卡(仅支持储值卡)</string>


  <!--category-->
  <string name="update_category">修改分类</string>
  <string name="add_category">新建分类</string>
  <string name="delete_category">确定删除该分类？</string>
  <string name="category_products">共%d件商品</string>
  <string name="product_add_category">分类至（按分类展示商品，方便买家筛选）</string>

  <!--inventory-->
  <string name="all_inventory_list">查看总库存记录</string>
  <string name="all_product_inventory">全部商品</string>
  <string name="inventory_reocrd">库存记录</string>
  <string name="inventory_add">(库存增加)</string>
  <string name="inventory_reduce">(库存减少)</string>
  <string name="inventory_sale">(售卖)</string>
  <string name="inventory_return">(退货)</string>
  <string name="add_inventory">增加库存</string>
  <string name="add_inventoty_detail">增加后库存：%d</string>
  <string name="reduce_inventory">减少库存</string>
  <string name="reduce_inventory_detail">减少后库存：%d</string>
  <string name="add_inventory_count">增加库存数</string>
  <string name="reduce_inventory_count">减少库存数</string>
  <string name="reduce_inventory_not_enough">当前库存不足扣除%d</string>
  <string name="add_inventory_count_input">输入增加的库存数</string>
  <string name="reduce_inventory_count_input">输入减少的库存数</string>
  <string name="category_empty">暂无分类，赶快去添加吧～</string>
  <string name="inventort_emptry">暂无库存商品，赶快去添加吧～</string>
  <string name="category_name_limit">分类名称不能大于12个字符</string>
  <string name="category_name_empty">分类名称不能为空</string>
  <string name="input_number">请输入数字</string>
  <string name="category_weight_empty">分类权重不能为空</string>
  <string name="weight_cant_over">权重不能大于10000000</string>
  <string name="operator_success">操作成功</string>
  <string name="operator_fail">操作失败</string>
  <string name="input_right_number">请输入正确数字</string>
  <string name="product_inventor_over">商品库存不能大于9999</string>
  <string name="product_desc_detail">商品描述详情</string>
  <string name="sure_clear_cur_content">确定清空当前内容</string>
  <string name="sure_give_up_modify">确定放弃所做修改</string>
  <string name="input_product_desc">请输入商品描述</string>
  <string name="sure_give_up_add_product">确定要放弃添加商品么？</string>
  <string name="product_name_over_20">商品名称不能大于20个字符</string>
  <string name="product_unit_over_10">商品单位不能大于个10字符</string>
  <string name="add_prodcut_image">请添加商品图片</string>
  <string name="choose_product_support_card">请选择支持的会员卡种类</string>
  <string name="input_good_name">请输入规格名称</string>
  <string name="input_product_good_inventory">请输入规格库存</string>
  <string name="input_product_card_prices">请输入会员卡支付价格</string>
  <string name="choose_product_deliver">请选择交货方式</string>
  <string name="weight_not_below_zero">权重不能小于等于0</string>

  <string name="add_success">添加成功</string>
  <string name="no_access">禁止访问</string>

  <string name="no_current_page_permission">您没有当前页面的访问权限</string>

</resources>
