<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">
  <data>
    <variable
        name="good"
        type="cn.qingchengfit.shop.vo.Good"
        />
    <import type="android.text.TextUtils"/>

  </data>

  <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="horizontal"
      android:paddingTop="14dp"
      >
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        >
      <cn.qingchengfit.widgets.CommonInputView
          android:id="@+id/category_name"
          android:layout_width="match_parent"
          android:layout_height="@dimen/dimen_common_input_60dp"
          app:civ_content="@={good.name}"
          app:civ_hint="@string/input_product_category"
          app:civ_lable="@string/type"
          app:civ_max_length="12"
          app:civ_nonnull="true"
          style="@style/QcCivInputStyle"
          />
      <cn.qingchengfit.widgets.CommonInputView
          android:id="@+id/category_price"
          android:layout_width="match_parent"
          android:layout_height="@dimen/dimen_common_input_60dp"
          app:civ_content="@{good.rmbPrices}"
          app:civ_hint="@string/input_product_price"
          app:civ_inputnum="true"
          app:civ_lable="@string/price"
          app:civ_max_length="10"
          app:civ_nonnull="true"
          style="@style/QcCivInputStyle"
          />
      <cn.qingchengfit.widgets.CommonInputView
          android:id="@+id/category_price_card"
          android:layout_width="match_parent"
          android:layout_height="@dimen/dimen_common_input_60dp"
          app:civ_content="@{good.cardPrices}"
          app:civ_hint="@string/input_product_price"
          app:civ_inputnum="true"
          app:civ_lable="@string/product_pay_card_price"
          app:civ_max_length="10"
          app:civ_nonnull="true"

          style="@style/QcCivInputStyle"
          />
      <cn.qingchengfit.widgets.CommonInputView
          android:id="@+id/category_inventory"
          android:layout_width="match_parent"
          android:layout_height="@dimen/dimen_common_input_60dp"
          app:civ_content='@={good.inventoryStr}'
          app:civ_hint="@string/input_product_inventory"
          app:civ_inputnum="true"
          app:civ_lable="@string/inventory"
          app:civ_max_length="4"
          app:civ_nonnull="true"
          style="@style/QcCivInputStyle"
          />

    </LinearLayout>
    <ImageView
        android:id="@+id/im_delete"
        android:layout_width="50dp"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:scaleType="centerInside"
        app:srcCompat="@drawable/reduce_inventory"
        />

  </LinearLayout>
</layout>