<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:bind="http://schemas.android.com/apk/res-auto"
    >
  <data>
    <variable
        name="toolbarModel"
        type="cn.qingchengfit.model.others.ToolbarModel"
        />

  </data>
  <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:orientation="vertical"
      >
    <include
        layout="@layout/common_simple_toolbar"
        android:id="@+id/include_toolbar"
        bind:toolbarModel="@{toolbarModel}"
        />
    <cn.qingchengfit.widgets.SwitcherLayout
        app:sw_lable="@string/product_pay_online"
        style="@style/QcSwitchLayout"
        />
    <cn.qingchengfit.widgets.SwitcherLayout
        android:layout_marginTop="14dp"
        app:sw_lable="@string/product_pay_offline"
        style="@style/QcSwitchLayout"
        />
    <cn.qingchengfit.widgets.SwitcherLayout
        android:layout_marginTop="14dp"
        app:sw_lable="@string/product_pay_card"
        style="@style/QcSwitchLayout"
        />


  </LinearLayout>
</layout>