<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:bind="http://schemas.android.com/apk/res-auto">
  <data>
    <variable
        name="toolbarModel"
        type="cn.qingchengfit.model.others.ToolbarModel"
        />
    <variable
        name="viewModel"
        type="cn.qingchengfit.shop.ui.product.addsuccess.ProductAddSuccessViewModel"
        />
  </data>
  <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:orientation="vertical"
      >
    <include
        layout="@layout/common_simple_toolbar"
        android:id="@+id/include_toolbar"
        bind:toolbarModel="@{toolbarModel}"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:background="@color/colorPrimary"
        android:orientation="vertical"
        >
      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_gravity="center_horizontal"
          android:layout_marginTop="34dp"
          android:drawableLeft="@drawable/add_product_succeed"
          android:text="@string/product_onsale"
          android:textColor="@color/white"
          android:textSize="18dp"
          style="@style/QcTextStyleLargeDark"
          />
      <TextView
          android:id="@+id/title_content"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_gravity="center_horizontal"
          android:layout_marginTop="16dp"
          android:text="@string/product_onsave_status"
          android:textColor="@color/white"
          android:textSize="18dp"
          style="@style/QcTextStyleLargeDark"
          />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="31dp"
        android:orientation="horizontal"
        >
      <Button
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:text="@string/back_shop_home"
          android:onClick="@{(view)->viewModel.onBackHome()}"
          style="@style/QcBtnPrimaryFrame"
          />
      <Space
          android:layout_width="15dp"
          android:layout_height="1dp"
          />

      <Button
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:text="@string/continue_add"
          android:onClick="@{(view)->viewModel.onAddMore()}"
          style="@style/QcBtnPrimary"
          />

    </LinearLayout>

  </LinearLayout>
</layout>