<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:bind="http://schemas.android.com/apk/res-auto"
    >
  <data>
    <variable
        name="toolbarModel"
        type="cn.qingchengfit.model.others.ToolbarModel"
        />
    <variable
        name="viewModel"
        type="com.example.huangbaole.shop.ui.home.productlist.ShopProductsViewModel"/>
  </data>
  <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:orientation="vertical"
      >
    <RelativeLayout
        android:id="@+id/rl_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:padding="10dp"
        app:layout_scrollFlags="scroll|enterAlways"
        >

      <EditText
          android:id="@+id/et_search"
          android:layout_width="match_parent"
          android:layout_height="@dimen/qc_allotsale_search_hight"
          android:background="@drawable/bg_rect_allotsale_search"
          android:drawableLeft="@drawable/ic_allotsale_search"
          android:drawablePadding="10dp"
          android:hint="@string/search_product"
          android:focusable="false"
          android:paddingLeft="10dp"
          android:paddingStart="10dp"
          android:textSize="@dimen/min_font"
          />

      <ImageView
          android:id="@+id/img_search_clear"
          android:layout_width="@dimen/qc_allotsale_search_hight"
          android:layout_height="@dimen/qc_allotsale_search_hight"
          android:layout_alignEnd="@+id/et_search"
          android:layout_alignRight="@+id/et_search"
          android:layout_centerVertical="true"
          android:layout_gravity="center_vertical|right"
          android:padding="9dp"
          android:visibility="gone"
          app:srcCompat="@drawable/ic_cancel_grey_16dp"
          />
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        >
      <com.example.huangbaole.shop.ui.widget.SortTextView
          android:id="@+id/text"
          android:layout_width="100dp"
          android:layout_height="match_parent"
          android:background="@color/red"
          android:drawablePadding="0dp"
          android:checkMark="@drawable/fab_add"
          android:checkMarkTintMode="multiply"
          android:checkMarkTint="@color/colorPrimary"
          android:gravity="center"
          android:text="@string/weight"
          style="@style/QcTextStyleMediumDark"
          />
    </LinearLayout>
    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        />
    <include layout="@layout/divider_grey"/>
    <TextView
        android:id="@+id/add_product"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:drawablePadding="7dp"
        style="@style/QcTextStyleLargeDark"
        android:textColor="@color/colorPrimary"
        android:gravity="center"
        android:onClick="@{()->viewModel.onAddProductCall()}"
        android:drawableLeft="@drawable/product_add"
        android:text="@string/add_product"
        />


  </LinearLayout>
</layout>